--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:              "Ahmet Can Bilici"
 description:        "Kişisel Blog"
 author_name:        "ahmetcanblc" # change this to your name
-logo_url:           https://avatars0.githubusercontent.com/u/13794983?v=4 # Get it from GitHub API: https://api.github.com/users/<username>
+logo_url:           https://octodex.github.com/images/minion.png # Get it from GitHub API: https://api.github.com/users/<username>
 
 # Site Settings
 url:                https://ahmetcanblc.github.io # main url
